# SGS-Chatbot

./: LICENSE  README.md  pyproject.toml
embedder/: voyage.py
notebooks/: assistant_setup.ipynb
scraper/scraper/spiders/: grad_school_info_spider.py
sgs_chatbot/: chatbot.py  config.py
sgs_chatbot/embedder/: voyage.py
sgs_chatbot/llm/: custom_llm.py
sgs_chatbot/vector_database/: pinecone.py  record.py
