[tool.poetry]
name = "sgs_chatbot"
version = "0.1.0"
description = "This package contains the implementation of the Rutgers SGS AI Assistant"
authors = ["Advaith Rao <advaith652@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sgs_chatbot"}]


[tool.poetry.dependencies]
python = "^3.9"
jupyter = "*"
pandas = "*"
langchain = "*"
langchain_community = "*"
llama_index = "*"
pathlib = "*"
pinecone-client = { git = "https://github.com/pinecone-io/pinecone-python-client.git" }
regex = "*"
scrapy = "*"
markdownify = "*"
transformers = "*"
voyageai = "*"
python-dotenv = "*"
pyarrow = "*"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-xdist = "*"